Change error dialog; fix indentation

--- a/translations/en-us/dialogs.json
+++ b/translations/en-us/dialogs.json
@@ -1,5 +1,5 @@
 {
-    "gpt_error.dialog": [
+    "error.dialog": [
         "I was not able to get an answer from {name}",
         "Sorry but something went wrong with the {name} request."
     ],
