--- a/translations/fr-fr/dialogs.json
+++ b/translations/fr-fr/dialogs.json
@@ -1,5 +1,5 @@
 {
-    "gpt_error.dialog": [
+    "error.dialog": [
         "Je n'ai pas pu obtenir de r\u00e9ponse venant de {name}",
         "D\u00e9sol\u00e9, mais quelque chose s'est mal pass\u00e9 avec la demande \u00e0 {name}"
     ],
