--- a/translations/nl-nl/dialogs.json
+++ b/translations/nl-nl/dialogs.json
@@ -1,5 +1,5 @@
 {
-    "gpt_error.dialog": [
+    "error.dialog": [
         "Ik kon geen antwoord krijgen van {name}",
         "Sorry, maar er is iets misgegaan met het verzoek aan {name}"
     ],
