--- a/translations/pt-pt/dialogs.json
+++ b/translations/pt-pt/dialogs.json
@@ -1,10 +1,10 @@
 {
-  "gpt_error.dialog": [
-    "{name} não soube responder",
-    "Desculpe, mas aconteceu algo de errado ao perguntar ao {name}."
-  ],
-  "asking.dialog": [
-    "Deixa-me perguntar ao {name}",
-    "Vou perguntar ao {name}"
-  ]
+    "error.dialog": [
+        "{name} não soube responder",
+        "Desculpe, mas aconteceu algo de errado ao perguntar ao {name}."
+    ],
+    "asking.dialog": [
+        "Deixa-me perguntar ao {name}",
+        "Vou perguntar ao {name}"
+    ]
 }
